--- a/week1/templates/index.html
+++ b/week1/templates/index.html
@@ -7,16 +7,20 @@ It does not use the power of Flask, but is easier to read than some of the other
 
 <!-- learn more about what belongs in head and how it is used here 
 https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/The_head_metadata_in_HTML -->
+
 <head>
-	<title>A Static Page</title>
-	<meta charset="utf-8"/>
+    <title>A Static Page</title>
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="../static/styles.css">
-</head> 
+</head>
+
 <body>
     <h1 class="banner">Hello, Static HTML!</h1>
     <p>This page is static HTML, or hard-coded. It is similar to what we did in class the first week on glitch. </p>
     <p>So far, we are not using the power of Flask, but you will in this assignment!</p>
 
-    <p> To see a page which starts to use Flask to <em>generate</em> dynamic code, <a href="/first-page">click here</a>.</p>
+    <p> To see a page which starts to use Flask to <em>generate</em> dynamic code, <a href="/first-page">click here</a>.
+    </p>
 </body>
+
 </html>
