--- a/week1/templates/index.html
+++ b/week1/templates/index.html
@@ -15,12 +15,13 @@ https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/The_hea
 </head>
 
 <body>
-    <h1 class="banner">Hello, Static HTML!</h1>
-    <p>This page is static HTML, or hard-coded. It is similar to what we did in class the first week on glitch. </p>
-    <p>So far, we are not using the power of Flask, but you will in this assignment!</p>
+    <ul>
+        <li><a href="/first-page">First Page/a></li>
+        <li><a href="/second-page">secondpage</a></li>
+        <li><a href="/index">Index</a></li>
+        this is the index
+    </ul>
 
-    <p> To see a page which starts to use Flask to <em>generate</em> dynamic code, <a href="/first-page">click here</a>.
-    </p>
 </body>
 
 </html>
