--- a/week1/templates/second-page.html
+++ b/week1/templates/second-page.html
@@ -1,5 +1,20 @@
 {% extends "base.html" %} {% block content %}
-<p>
-    hu
-</p>
+
+<h1>
+    Study Programs at Code
+</h1>
+
+<ul>
+    <li>
+        <h3>Product Management</h3>
+    </li>
+    <li>
+        <h3>Interaction Design</h3>
+    </li>
+    <li>
+        <h3>Software Engineering</h3>
+    </li>
+</ul>
+
+
 {% endblock %}
