Filling Second Page with Content

--- a/week1/templates/second-page.html
+++ b/week1/templates/second-page.html
@@ -1,20 +1,58 @@
 {% extends "base.html" %} {% block content %}
+<div class="study_programs">
+    <div class="first_view">
+        <h1>
+            Study Programs at Code
+        </h1>
 
-<h1>
-    Study Programs at Code
-</h1>
+        <div class="buttonbox">
+            <button><a href="#PM">Product Management</a></button>
+            <button style="margin-left:3rem"><a href="#ID">Interaction Design</a></button>
+            <button style="margin-left:3rem"><a href="#SE">Software Engineering</a></button>
+        </div>
+    </div>
+    <div class="second_view">
+        <h1><a name="PM">Bachelor of Arts in Product Management</a></h1>
+        <h3>Product managers develop strategies and concepts for digital products, coordinate their development, analyze and validate ideas and help them grow.</h3>
+        <p>
+            There are core competencies that every product manager needs to be successful, while other focus areas allow our students to deepen their knowledge and find their profile of expertise. Some skills can be learned in the classroom, but most are developed
+            with experience, good role models, and mentoring. Unlike traditional universities, we value interdisciplinary approaches. All three parts of digital product development – software engineering, interaction design, and product management – are
+            interwoven throughout our bachelor programs. This way, our students gain experience in collaboration setups already during their studies, giving them a vital foundation to build on in their professional life. At CODE, the role of our faculty
+            is different. It’s all about knowledge sharing, and they see themselves as coaches and mentors, encouraging students to push boundaries and shape their profile. Studying at CODE guides students to decide what kind of product manager they want
+            to be and who they want to become in their professional life.
 
-<ul>
-    <li>
-        <h3>Product Management</h3>
-    </li>
-    <li>
-        <h3>Interaction Design</h3>
-    </li>
-    <li>
-        <h3>Software Engineering</h3>
-    </li>
-</ul>
+        </p>
+        <button><a href="https://code.berlin/en/study/product-management/" target="_blank">Learn More about Product Management</a></button>
+    </div>
+    <div class="third_view">
+        <h1><a name="ID">Bachelor of Arts in Interaction Design</a></h1>
+        <h3>This program within the fast-changing discipline takes future designers on a journey that explores the look, feel, and behavior to create positive experiences through technology. The Interaction Design Bachelor’s program is fully taught in English.
+        </h3>
+        <p>
+            However, Interaction Design is not merely concerned with aesthetic choice. It is instead based on an understanding of users’ desires, needs, motivations, context, constraints, social and psychological factors to design a user experience in which technology
+            has a role. While designing the system behavior the interaction designer has the responsibility for the user satisfaction with the product or service. Aligned with emerging insights in the discipline, the focus is no longer on the digital
+            product or service itself but instead on the experience mediated through the technology. Aspects of aesthetics and form are crucial for any digital product regardless if the interface is digital or physical.
 
+        </p>
+        <button><a href="https://code.berlin/en/study/interaction-design/" target="_blank">Learn More about Interaction Design</a></button>
+    </div>
+    <div class="second_view">
+        <h1><a name="SE">Bachelor of Science in Software Engineering</a></h1>
+        <h3>Software engineering is the systematic application of engineering principles to the development of software systems. Our study program covers the ability to solve complex tasks programmatically by designing the software architecture, producing
+            clean and well-documented code and following best practices from various domains, such as automated testing and security. The Software Engineering Bachelor’s program is fully taught in English.</h3>
+        <p>
+            In these topics we always aim for a deeper understanding that transcends the properties and abilities of a specific framework, tool or programming language. This knowledge is complemented by practical experience in organizing and collaborating in interdisciplinary
+            teams. Competent software engineers are excellent problem solvers and combine abstract thinking skills with a hands-on mentality. The Software Engineering Bachelor’s program provides you with comprehensive scientific and practically applicable
+            competencies you need to become an expert in the field of software development. We also provide the ability to specialize in various fields of software engineering, to develop your professional profile. Software engineers make the world better
+            by crafting code in a multitude of environments, disci­plines, and lang­uages – on their own and in teams. We challenge our students every day, helping them to see the depth of topics they are interested in.
+
+        </p>
+        <button><a href="https://code.berlin/en/study/software-engineering/" target="_blank">Learn More about Software Engineering</a></button>
+    </div>
+    <div class="third_view">
+        <h1>At CODE you will experience a new way of learning</h1>
+        <h3>The most effective way to learn is not by passively absorbing selected facts and ready-made content to reproduce for the next exam. </h3>
+    </div>
+</div>
 
 {% endblock %}
