--- a/week1/static/styles.css
+++ b/week1/static/styles.css
@@ -82,10 +82,6 @@ h3 {
     margin: 3rem 0 0 5rem;
 }
 
-.first_view {
-    height: 50vh;
-}
-
 button {
     padding: 1rem;
     background-color: #0B2126;
@@ -99,6 +95,7 @@ button {
 button a {
     color: #F2E8E4;
     text-decoration: none;
+    cursor: pointer;
 }
 
 button:hover {
@@ -110,20 +107,28 @@ button:hover {
     margin: 5rem auto auto 5rem;
 }
 
+.first_view {
+    height: 50vh;
+}
+
 .second_view {
     background-color: #F2E8E4;
-    height: 50vh;
+    height: 60vh;
     width: 100%;
     color: #0B2126;
     padding-top: 5rem;
 }
 
 .third_view {
-    height: 50vh;
+    height: 60vh;
     width: 100%;
     padding-top: 5rem;
 }
 
 p {
     margin: 1rem 5rem 1rem 5rem;
+}
+
+.study_programs button {
+    margin: 1rem auto auto 5rem;
 }
