--- a/week1/templates/first-page.html
+++ b/week1/templates/first-page.html
@@ -1,5 +1,41 @@
 {% extends "base.html" %} {% block content %}
-<h1>
-    Students at Code
-</h1>
+<div class="admissions">
+    <div class="first_view">
+        <h1>Are we a perfect match?</h1>
+        <h3>At CODE we want to attract the most talented and passionate students, not the most privileged. In our admission process, we aim to challenge your drive and curiosity.</h3>
+        <button><a href="https://code.berlin/en/admission/process/" target="_blank">Apply</a></button>
+    </div>
+    <div class="second_view">
+        <h1>You can start applying now!</h1>
+        <h3>Application deadlines: EU residents: 15th of July 2021; applicants requiring a study visa: 6th of June</h3>
+        <p>
+            <h4>Most important information</h4>
+            <ul>
+                <li>state-accredited Bachelor</li>
+                <li>in Software Engineering, Product Management, Interaction Design</li>
+                <li>Standard period of study: 3 years (6 semesters)</li>
+                <li>Classes begin in September, but the onboarding end of August</li>
+                <li>Face-to-face study program in Berlin (distance learning only under Corona-Circumstances)</li>
+                <li>Study abroad opportunities</li>
+            </ul>
+        </p>
+        <button><a href="https://code.berlin/en/admission/process/" target="_blank">Apply</a></button>
+    </div>
+
+    <div class="third_view">
+        <h1>The Admissions Process</h1>
+        <h3>Our admissions process is designed to identify if you are the type of student who will realize his or her potential at CODE and be a valuable part of our learning community.</h3>
+        <p>
+            Our admission process has another unique quality: you are not competing with the other applicants for a spot. This is why all applicants going through the same application process, regardless of their previous knowledge and background. We cannot enroll
+            an unlimited number of students but there is no fixed number of places to fill. Even if you are not 100 percent sure if CODE is the right place for you: give it a try! During your application process, you will have the chance to learn how
+            we think, talk, and act at CODE.
+        </p>
+        <ol>
+            <li>Written Application</li>
+            <li>Challenge </li>
+            <li>Video Call and Admission Day</li>
+        </ol>
+        <button><a href="https://code.berlin/en/admission/process/" target="_blank">Learn More about the Admission Process</a></button>
+    </div>
+</div>
 {% endblock %}
