--- a/week1/templates/base.html
+++ b/week1/templates/base.html
@@ -35,14 +35,14 @@
     </main>
     <footer>
         <h2> Contact us </h2>
-        <form>
-            <label for="fname">Name:</label><br>
+        <form action="mailto:sonja.soennichsen@code.berlin">
+            <label>Name:</label><br>
             <input type="text" id="name"><br><br>
-            <label for="femail">E-Mail:</label><br>
-            <input type="email" id="email"><br><br>
-            <label for="fmessage">Message:</label><br>
-            <textarea name="message" rows="10" cols="30"> </textarea><br> <br>
-            <input type="submit" value="Submit">
+            <label>E-Mail:</label><br>
+            <input type="email" required="" id="email"><br><br>
+            <label>Message:</label><br>
+            <textarea name="message" equired="" rows="10" cols="30"> </textarea><br> <br>
+            <input class="submit_button" type="submit" value="Submit">
         </form>
     </footer>
 </body>
