--- a/week1/templates/first-page.html
+++ b/week1/templates/first-page.html
@@ -2,7 +2,7 @@
 <div class="admissions">
     <div class="first_view">
         <h1>Are we a perfect match?</h1>
-        <h3>At CODE we want to attract the most talented and passionate students, not the most privileged. In our admission process, we aim to challenge your drive and curiosity.</h3>
+        <h3>At CODE we want to attract the most talented and passionate students, not the most privileged.<br> In our admission process, we aim to challenge your drive and curiosity.</h3>
         <button><a href="https://code.berlin/en/admission/process/" target="_blank">Apply</a></button>
     </div>
     <div class="second_view">
@@ -36,6 +36,10 @@
             <li>Video Call and Admission Day</li>
         </ol>
         <button><a href="https://code.berlin/en/admission/process/" target="_blank">Learn More about the Admission Process</a></button>
+    </div>
+    <div class="last_view" style="text-align: center;">
+        <h1>Apply Now</h1>
+        <button style="float:none"><a href="https://code.berlin/en/admission/process/" target="_blank">Apply</a></button>
     </div>
 </div>
 {% endblock %}
