--- a/week1/templates/index.html
+++ b/week1/templates/index.html
@@ -23,7 +23,7 @@
             do not wish to solely impart their knowledge to you, but rather try to support and strengthen you on your individual learning path. ßpßp0ü
     </p>
 </div>
-<div class="third_view">
+<div class="last_view">
     <h1>A new kind of university – The theoretical foundations</h1>
     <h3>CODE’s learning concept is unique and a lot of its details have been improved since we started back in 2017, especially thanks to our students who have helped tremendously to understand what works and what doesn’t and to figure out how to improve.</h3>
 </div>
