--- a/week1/templates/second-page.html
+++ b/week1/templates/second-page.html
@@ -49,7 +49,7 @@
         </p>
         <button><a href="https://code.berlin/en/study/software-engineering/" target="_blank">Learn More about Software Engineering</a></button>
     </div>
-    <div class="third_view">
+    <div class="last_view">
         <h1>At CODE you will experience a new way of learning</h1>
         <h3>The most effective way to learn is not by passively absorbing selected facts and ready-made content to reproduce for the next exam. </h3>
     </div>
