Matching Userinput with Colorname

--- a/color_check/templates/color.html
+++ b/color_check/templates/color.html
@@ -1,7 +1,5 @@
-{% extends "base.html" %}
-
-{% block content %}
-    <p> Edit this file to show the name of the color and to render a square of that color itself! 
-    </p>
+{% extends "base.html" %} {% block content %}
+<p> Edit this file to show the name of the color and to render a square of that color itself!
+</p>
 
 {% endblock %}
