--- a/color_check/templates/color.html
+++ b/color_check/templates/color.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %}
-<p> Edit this file to show the name of the color and to render a square of that color itself!
+<p> The color looks like this:
 </p>
-
-{% endblock %}
+<div class="square"></div>
+<a href="/">Try again</a> {% endblock %}
