--- a/color_check/templates/color.html
+++ b/color_check/templates/color.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %}
-<p> The color looks like this:
+<p> The Hex Code from {{color_name}} is {{color_hex_code}} and looks like this:
 </p>
 <div class="square"></div>
 <a href="/">Try again</a> {% endblock %}
