--- a/color_check/templates/index.html
+++ b/color_check/templates/index.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %} {% block content %}
-<p> Here's your starting point. You will want to edit this file to include instructions for your users. There should be an HTML form here which gets a string from a user, and sends that information to the backend to check if the color is a valid CSS color
-    or not.
+<p> Just type in the colorname and I will check if it is valid in CSS :)
 
 
     <!-- when the user submits this form, it will send the information submitted from the client (frontend)
