--- a/color_check/static/styles.css
+++ b/color_check/static/styles.css
@@ -18,4 +18,14 @@ footer {
 a {
     padding: 1rem;
     background-color: rgb(160, 185, 207);
+    color: white;
+    text-decoration: none;
+}
+
+.square {
+    margin: 3rem auto;
+}
+
+p {
+    margin: 2rem;
 }
