Debug: Removing JS

--- a/color_check/templates/base.html
+++ b/color_check/templates/base.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <script>
+    <!-- <script>
         function addCss(rule) {
             let css = document.createElement('style');
             css.type = 'text/css';
@@ -20,7 +20,7 @@
         window.onload = function() {
             addCss(rule)
         };
-    </script>
+    </script> -->
     <!-- the page title will be a varible passed to the render_template() function for each page separately-->
     <title> {{ page_title }}</title>
     <meta charset="utf-8" />
