--- a/great_project/static/styles.css
+++ b/great_project/static/styles.css
@@ -1,20 +1,98 @@
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-left: 2rem;
+  font-size: 1rem;
+  font-family: "Poppins";
+  opacity: 2;
+  color: rgb(255, 255, 255);
+  background: linear-gradient(-45deg, #b052ee, #23a6d5, #00ffc8);
+  background-size: auto;
 }
 
-.banner {
-    margin-top: 2rem;
-    color: black;
-    margin-bottom: 1rem;
+.logo {
+  padding: 0 0 0 3vh;
+  float: left;
+  font-size: 3vh;
+  width: 5%;
+}
+
+.logo a {
+  text-decoration: none;
+  letter-spacing: 0.03em;
+  font-weight: bold;
+  color: white;
+}
+
+table {
+  float: right;
+  border-collapse: collapse;
+}
+
+td {
+  margin: auto 3rem auto 3rem;
+  height: 8.5vh;
+}
+
+table a {
+  position: relative;
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 1rem 0;
+  transition: 0.5s;
+  color: white;
+  padding: 1vh 3vw;
+}
+
+table a::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 2px;
+  top: 100%;
+  left: 0;
+  background: white;
+  transition: transform 0.5s;
+  transform: scaleX(0);
+  transform-origin: center;
+}
+
+table a:hover::after {
+  transform: scaleX(1);
+  transform-origin: center;
+}
+
+.box {
+  width: 98%;
+  height: 8.5vh;
+  border: 2px solid white;
+  margin: 1rem;
+  font-size: 2vh;
 }
 
 footer {
-    margin-top: 5rem;
-    text-align: center;
+  margin: 50vh 1rem 1rem 1rem;
+  width: 98%;
+  border: 2px solid white;
+  font-size: 2vh;
+  text-align: center;
+  padding: 5rem 0;
 }
 
-.button{
-    color: antiquewhite;
-    background-color:firebrick;
+footer .logo {
+  float: none;
+}
+
+footer .logo a {
+  color: white;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+  margin: 2vh;
+  transition: 0.5s;
+}
+
+.header1 {
+  text-align: center;
+  margin: 10rem 0;
 }
