--- a/great_project/templates/base.html
+++ b/great_project/templates/base.html
@@ -3,22 +3,27 @@
 <head>
     <title> {{ page_title }}</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <script type="text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:700&amp;display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-    <header>
-        <div class="banner">
-            <h1> My Great Project</h1>
-        </div>
-    </header>
+    <span class="logo"> <a href="/">SONJA SÖNNICHSEN</a></span>
+    <div class="box">
+        <table>
+            <td><a href=""> Portfolio </a></td>
+            <td><a href=""> Codebase </a></td>
+            <td><a href=""> Contact </a></td>
+        </table>
+    </div>
     <main>
         {% block content%} {% endblock %}
     </main>
     <footer>
-        <h3> <em> By Your Name Here </em></h3>
+        <span class="logo"> <a href="/">SONJA SÖNNICHSEN </a></span> <br><br><br>
+        <a href="">Imprint</a> <a href="">About</a> <a href="">Portfolio</a> <a href="">Photography</a>
     </footer>
 </body>
