--- a/great_project/templates/index.html
+++ b/great_project/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <p> What an amazing website.</p>  
 
-    <button onclick="warnUser()"> Push Me. I Dare You. </button>  
+<div class="header1">Hey Guys, I have no Idea who I am. Please hire me :)</div>
 
-{% endblock %}  
+
+{% endblock %}
